added overlay to img in work section

--- a/index.html
+++ b/index.html
@@ -118,12 +118,15 @@
           <ul class="work-list list">
             <li class="work-list__item">
               <img src="./images/work/img1.jpg" alt="чоловік друкує на клавіатурі" width="370" />
+              <p class="work-text">Десктопні додатки</p>
             </li>
             <li class="work-list__item">
               <img src="./images/work/img2.jpg" alt="ноутбук" width="370" />
+              <p class="work-text">Мобільні додатки</p>
             </li>
             <li class="work-list__item">
               <img src="./images/work/img3.jpg" alt="планшет" width="370" />
+              <p class="work-text">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
