--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,13 @@
           <ul class="cards-list list">
             <li class="cards-list__item">
               <a href="" class="cards-list__link">
-                <img src="./images/portfolio/laptop.jpg" alt="laptop" width="370" />
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/laptop.jpg" alt="laptop" width="370" />
+                  <p class="cards-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Технокряк</h2>
                   <p class="cards-list__subtitle">Веб-сайт</p>
