--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
               <a href="./index.html" class="nav-list__link nav link">Студія</a>
             </li>
             <li class="nav-list__item">
-              <a href="./portfolio.html" class="nav-list__link active nav link">Портфоліо</a>
+              <a href="./portfolio.html" class="nav-list__link nav link" id="active">Портфоліо</a>
             </li>
             <li class="nav-list__item">
               <a href="#" class="nav-list__link nav link">Контакти</a>
@@ -76,13 +76,15 @@
 
           <ul class="cards-list list">
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
+              <a href="" class="cards-list__link link">
                 <div class="cards-thumb">
                   <img src="./images/portfolio/laptop.jpg" alt="laptop" width="370" />
-                  <p class="cards-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                    відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Технокряк</h2>
@@ -91,8 +93,16 @@
               </a>
             </li>
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
-                <img src="./images/portfolio/basketball.jpg" alt="poster" width="370" />
+              <a href="" class="cards-list__link link">
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/basketball.jpg" alt="basketball poster" width="370" />
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Постер New Orlean vs Golden Star</h2>
                   <p class="cards-list__subtitle">Дизайн</p>
@@ -100,8 +110,16 @@
               </a>
             </li>
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
-                <img src="./images/portfolio/seefood.jpg" alt="restaurant-logo" width="370" />
+              <a href="" class="cards-list__link link">
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/seefood.jpg" alt="logo of seafood restaurant" width="370" />
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Ресторан Seafood</h2>
                   <p class="cards-list__subtitle">Додаток</p>
@@ -109,8 +127,16 @@
               </a>
             </li>
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
-                <img src="./images/portfolio/headphones.jpg" alt="headphones" width="370" />
+              <a href="" class="cards-list__link link">
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/headphones.jpg" alt="headphones" width="370" />
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Проєкт Prime</h2>
                   <p class="cards-list__subtitle">Маркетинг</p>
@@ -118,8 +144,16 @@
               </a>
             </li>
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
-                <img src="./images/portfolio/box.jpg" alt="box" width="370" />
+              <a href="" class="cards-list__link link">
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/box.jpg" alt="boxes" width="370" />
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Проєкт Boxes</h2>
                   <p class="cards-list__subtitle">Додаток</p>
@@ -127,8 +161,16 @@
               </a>
             </li>
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
-                <img src="./images/portfolio/monitor.jpg" alt="monitor" width="370" />
+              <a href="" class="cards-list__link link">
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/monitor.jpg" alt="monitor" width="370" />
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Inspiration has no Borders</h2>
                   <p class="cards-list__subtitle">Веб-сайт</p>
@@ -136,8 +178,16 @@
               </a>
             </li>
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
-                <img src="./images/portfolio/book.jpg" alt="book" width="370" />
+              <a href="" class="cards-list__link link">
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/book.jpg" alt="book" width="370" />
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Видання Limited Edition</h2>
                   <p class="cards-list__subtitle">Дизайн</p>
@@ -145,8 +195,16 @@
               </a>
             </li>
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
-                <img src="./images/portfolio/tag.jpg" alt="tag" width="370" />
+              <a href="" class="cards-list__link link">
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/tag.jpg" alt="tag" width="370" />
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Проєкт LAB</h2>
                   <p class="cards-list__subtitle">Маркетинг</p>
@@ -154,8 +212,16 @@
               </a>
             </li>
             <li class="cards-list__item">
-              <a href="" class="cards-list__link">
-                <img src="./images/portfolio/mackbook.jpg" alt="mackbook" width="370" />
+              <a href="" class="cards-list__link link">
+                <div class="cards-thumb">
+                  <img src="./images/portfolio/mackbook.jpg" alt="mackbook" width="370" />
+                  <div class="cards-overlay">
+                    <p class="cards-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                      відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="cards-list__container">
                   <h2 class="cards-list__header">Growing Business</h2>
                   <p class="cards-list__subtitle">Додаток</p>
@@ -176,36 +242,36 @@
               <li class="footer-list__item">
                 <a
                   href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                  class="footer-list__address f-nav link"
+                  class="footer-list__address footer-nav link"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
               <li class="footer-list__item">
-                <a href="mailto:info@devstudio.com" class="footer-list__link f-nav link" lang="en"
+                <a href="mailto:info@devstudio.com" class="footer-list__link footer-nav link" lang="en"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="footer-list__item">
-                <a href="tel:+380961111111" class="footer-list__link f-nav link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="footer-list__link footer-nav link">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
 
-        <div class="socials">
-          <p class="socials-text">приєднуйтесь</p>
-          <ul class="socials-list list">
-            <li class="socials-list__item">
+        <div class="footer-socials">
+          <p class="footer-socials__text">приєднуйтесь</p>
+          <ul class="footer-socials__list list">
+            <li class="footer-socials-list__item">
               <a
                 href="https://instagram.com/"
-                class="socials-list__link"
+                class="footer-socials-list__link"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Instagram"
               >
-                <svg class="socials-icon" width="20" height="20">
+                <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
@@ -213,12 +279,12 @@
             <li>
               <a
                 href="https://twitter.com/"
-                class="socials-list__link"
+                class="footer-socials-list__link"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="twitter"
               >
-                <svg class="socials-icon" width="20" height="20">
+                <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
@@ -226,12 +292,12 @@
             <li>
               <a
                 href="https://facebook.com/"
-                class="socials-list__link"
+                class="footer-socials-list__link"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="facebook"
               >
-                <svg class="socials-icon" width="20" height="20">
+                <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
@@ -239,12 +305,12 @@
             <li>
               <a
                 href="https://linkedincom/"
-                class="socials-list__link"
+                class="footer-socials-list__link"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="linkedin"
               >
-                <svg class="socials-icon" width="20" height="20">
+                <svg class="footer-socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
