--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="section hero">
         <div class="container">
           <h1 class="hero__header">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero__button">Замовити послугу</button>
+          <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
 
@@ -565,5 +565,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop backdrop-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" data-modal-close>
+          <svg width="18" height="18">
+            <use href="./images/icons.svg#cross"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
